Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,23 +29,23 @@ client:
 
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: /homevalue/
+  first_CTA_URL: https://www.viewsandiegoareahomesforsale.com/homevalue/now
   second_CTA_text: Home Search
-  second_CTA_URL: /homesearch/
+  second_CTA_URL: https://www.viewsandiegoareahomesforsale.com/search
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/001.jpg
     CTA_title: "What’s Your San Diego Home Worth?"
     CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
     CTA_link_text: "Free Home Value Report"
-    CTA_url: /homevalue/
+    CTA_url: https://www.viewsandiegoareahomesforsale.com/homevalue/now
 
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/002.jpg
     CTA_title2: "Looking for a San Diego Home?"
     CTA_text2: "Search the entire MLS for your San Diego home."
     CTA_link_text2: "Search the MLS"
-    CTA_url2: /homesearch/
+    CTA_url2: https://www.viewsandiegoareahomesforsale.com/search
 
 lender:
   show_section: false
@@ -63,8 +63,8 @@ lender:
 socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/shayrealtors/
-  linkedin_url:
-  youtube_url:
+  linkedin_url: https://www.linkedin.com/company/shay-realtors/about/
+  youtube_url: https://www.youtube.com/channel/UCzCUBUg8aPfa3uqJMd-bXTA
   twitter_url: https://twitter.com/shayrealtors
   instagram_url: https://www.instagram.com/shayrealtors/
   pinterest_url:
