--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,23 +29,23 @@ client:
 
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: https://www.viewsandiegoareahomesforsale.com/homevalue/now
+  first_CTA_URL: /homevalue/
   second_CTA_text: Home Search
-  second_CTA_URL: https://www.viewsandiegoareahomesforsale.com/search
+  second_CTA_URL: /homesearch/
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/001.jpg
     CTA_title: "What’s Your San Diego Home Worth?"
     CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
     CTA_link_text: "Free Home Value Report"
-    CTA_url: https://www.viewsandiegoareahomesforsale.com/homevalue/now
+    CTA_url: /homevalue/
 
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/002.jpg
     CTA_title2: "Looking for a San Diego Home?"
     CTA_text2: "Search the entire MLS for your San Diego home."
     CTA_link_text2: "Search the MLS"
-    CTA_url2: https://www.viewsandiegoareahomesforsale.com/search
+    CTA_url2: /homesearch/
 
 lender:
   show_section: false
